best-practices/disallow-helm-tiller/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: disallow-helm-tiller
policies:
- ../disallow-helm-tiller.yaml
resources:
- resource.yaml
results:
- kind: Deployment
  policy: disallow-helm-tiller
  resources:
  - baddeployment01
  result: fail
  rule: validate-helm-tiller
- kind: Pod
  policy: disallow-helm-tiller
  resources:
  - badpod01
  - badpod02
  result: fail
  rule: validate-helm-tiller
- kind: Deployment
  policy: disallow-helm-tiller
  resources:
  - gooddeployment01
  result: pass
  rule: validate-helm-tiller
- kind: Pod
  policy: disallow-helm-tiller
  resources:
  - goodpod01
  - goodpod02
  result: pass
  rule: validate-helm-tiller
